SERVER-75317 Skip index check on shard that does not own chunks